<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Helper</string>
    <string name="action_settings">Settings</string>

    <string name="helper_main_richard_says">Remember me..? ; )</string>
    <string name="helper_main_richard_says_2">Ima brb soon!</string>

    <string name="helper_main_welcome">Welcome to the Helper</string>
    <string name="helper_main_input_hint">Type command here</string>
    <string name="helper_main_input_button">Execute</string>

    <string name="helper_calculator_display_default">0</string>
    <string name="helper_calculator_button_1">1</string>
    <string name="helper_calculator_button_2">2</string>
    <string name="helper_calculator_button_3">3</string>
    <string name="helper_calculator_button_4">4</string>
    <string name="helper_calculator_button_5">5</string>
    <string name="helper_calculator_button_6">6</string>
    <string name="helper_calculator_button_7">7</string>
    <string name="helper_calculator_button_8">8</string>
    <string name="helper_calculator_button_9">9</string>
    <string name="helper_calculator_button_0">0</string>
    <string name="helper_calculator_button_mul">*</string>
    <string name="helper_calculator_button_div">/</string>
    <string name="helper_calculator_button_plus">+</string>
    <string name="helper_calculator_button_min">-</string>
    <string name="helper_calculator_button_dot">.</string>
    <string name="helper_calculator_button_equ">=</string>
    <string name="helper_calculator_button_clear">CLEAR</string>
    <string name="helper_calculator_button_delete">|=</string>

    <string name="helper_mathbirds_button_1">1</string>
    <string name="helper_mathbirds_button_2">2</string>
    <string name="helper_mathbirds_button_3">3</string>
    <string name="helper_mathbirds_button_4">4</string>
    <string name="helper_mathbirds_button_5">5</string>
    <string name="helper_mathbirds_button_6">6</string>
    <string name="helper_mathbirds_button_7">7</string>
    <string name="helper_mathbirds_button_8">8</string>
    <string name="helper_mathbirds_button_9">9</string>
    <string name="helper_mathbirds_button_0">0</string>
    <string name="helper_mathbirds_button_d">|=</string>

    <string name="helper_function_function_hint">Func</string>
    <string name="helper_function_draw_button">Draw</string>
    <string name="helper_function_text_y_equals">y =</string>
    <string name="helper_function_text_x3">x3 +</string>
    <string name="helper_function_text_a">a</string>
    <string name="helper_function_text_x2">x2 +</string>
    <string name="helper_function_text_b">b</string>
    <string name="helper_function_text_x">x +</string>
    <string name="helper_function_text_c">c</string>
    <string name="helper_function_text_d">d</string>
    <string name="helper_function_text_plus">+</string>

    <!-- Content Description -->
    <string name="helper_desc_list_item_icon">Item Icon</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Calculator</item>
        <item >Memory Game</item>
        <item >Function</item>
        <item >Math Birds</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
    </array>

</resources>
