<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="@color/helper_calculator_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >

    <TableRow
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:id="@+id/helper_calculator_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helper_calculator_display_default"
                android:textSize="50dp"
                />
    </TableRow>
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
        <Button
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/helper_calculator_button_clear"
                android:text="@string/helper_calculator_button_clear"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_delete"
                android:text="@string/helper_calculator_button_delete"
                android:textSize="50dp"

                />
    </TableRow>
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/helper_calculator_button_7"
                android:text="@string/helper_calculator_button_7"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_8"
                android:text="@string/helper_calculator_button_8"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_9"
                android:text="@string/helper_calculator_button_9"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_div"
                android:text="@string/helper_calculator_button_div"
                android:textSize="50dp"

                />
    </TableRow>
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/helper_calculator_button_4"
                android:text="@string/helper_calculator_button_4"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_5"
                android:text="@string/helper_calculator_button_5"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_6"
                android:text="@string/helper_calculator_button_6"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_mul"
                android:text="@string/helper_calculator_button_mul"
                android:textSize="50dp"

                />
    </TableRow>
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/helper_calculator_button_1"
                android:text="@string/helper_calculator_button_1"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_2"
                android:text="@string/helper_calculator_button_2"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_3"
                android:text="@string/helper_calculator_button_3"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_min"
                android:text="@string/helper_calculator_button_min"
                android:textSize="50dp"

                />
    </TableRow>
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/helper_calculator_button_dot"
                android:text="@string/helper_calculator_button_dot"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_0"
                android:text="@string/helper_calculator_button_0"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_equ"
                android:text="@string/helper_calculator_button_equ"
                android:textSize="50dp"

                />
        <Button
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:id="@+id/helper_calculator_button_plus"
                android:text="@string/helper_calculator_button_plus"
                android:textSize="50dp"

                />
    </TableRow>


</TableLayout>