<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/helper_mathbirds_container">

    <view
            class="com.whatever.helper.mathbirds.MathBirdsView"
            android:id="@+id/helper_mathbirds_sky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
            android:id="@+id/helper_mathbirds_buttons"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_margin="2dp"
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_1"
                    android:id="@+id/helper_mathbirds_button_1"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_2"
                    android:id="@+id/helper_mathbirds_button_2"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_3"
                    android:id="@+id/helper_mathbirds_button_3"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_4"
                    android:id="@+id/helper_mathbirds_button_4"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_5"
                    android:id="@+id/helper_mathbirds_button_5"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_6"
                    android:id="@+id/helper_mathbirds_button_6"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_7"
                    android:id="@+id/helper_mathbirds_button_7"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_8"
                    android:id="@+id/helper_mathbirds_button_8"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_9"
                    android:id="@+id/helper_mathbirds_button_9"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
            <Button
                    android:textSize="@dimen/helper_mathbirds_textsize"
                    android:background="@color/helper_mathbirds_button_bg"
                    android:textColor="@color/helper_mathbirds_button_text"
                    android:text="@string/helper_mathbirds_button_0"
                    android:id="@+id/helper_mathbirds_button_0"
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>