<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/helper_main_bg"
              android:background="@color/helper_main_bg" >

    <TextView
            android:id="@+id/tt"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:padding="5dp"
            android:textColor="@color/helper_main_welcome"
            android:background="@color/black"
            android:text="@string/helper_main_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/helper_main_input_edittext"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/helper_main_input_hint"
                />
        <Button
                android:id="@+id/helper_main_input_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_main_input_button"

                />

    </LinearLayout>

    <ImageView
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/richard"/>

    <TextView
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/helper_main_richard_says"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="30sp"-->
            <!--android:text="@string/helper_main_richard_says_2"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->

</LinearLayout>

